--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -13,3 +13,5 @@ server.port=8081
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.accountapp=DEBUG
