--- a/frontend_money/package.json
+++ b/frontend_money/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "mantis-dashboard",
+  "name": "angular-mantis-dashboard",
   "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
-    "@angular/animations": "^18.2.13",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/router": "^18.2.13",
+    "@angular/animations": "^20.0.2",
+    "@angular/cdk": "^20.0.2",
+    "@angular/common": "^20.0.2",
+    "@angular/compiler": "^20.0.2",
+    "@angular/core": "^20.0.2",
+    "@angular/forms": "^20.0.2",
+    "@angular/platform-browser": "^20.0.2",
+    "@angular/router": "^20.0.2",
     "chart.js": "^4.4.0",
-    "rxjs": "^7.8.2",
+    "ng2-charts": "^6.0.1",
+    "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^18.2.19",
-    "@angular/cli": "^18.2.19",
-    "@angular/compiler-cli": "^18.2.13",
-    "typescript": "^5.5.4"
+    "@angular-devkit/build-angular": "^20.0.1",
+    "@angular/cli": "20.0.1",
+    "@angular/compiler-cli": "^20.0.2",
+    "@types/chart.js": "^2.9.41",
+    "typescript": "^5.8.2"
   }
 }
